[package]
name = "discord"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dotenv = "0.15.0"
tokio = {version="1.11.0", features = ["macros", "rt-multi-thread"]}
serenity = { version = "0.10.8", default-features = false, features = ["client", "gateway", "rustls_backend", "model"] }
regex = "1.5.4"
lazy_static = "1.4.0"
